feat: complete platform-independent core with AskCLI test program
- adapter 层基于 AIAPIConverter ChatModel 重写（五家提供商 + 自定义端点）
- 对话树完整实现（分支/重生成/编辑/删除/切换），contents 补全多模态与工具内容
- ChatEngine：工具循环 + 流式工具识别（单次生成、逐字输出），支持思考链
- ToolsManager 注册表/执行器，FetchUrl 示例工具
- storage 接口保留并新增 memory 参考实现
- AskCLI：仿原 ask-ai/那我问你 的 Java 命令行（会话持久化、历史、
  提示词、文件、流式输出、工具结果摘要）
- 全部单元测试通过